# ProjektSusel

./: package-lock.json  package.json  svelte.config.js
src/: ambient.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: async_data_handler.rs  commands.rs  lib.rs  macros.rs  main.rs  statics.rs
src/components/: AudioControls.svelte  AudioTracks.svelte  NotImplemented.svelte  ServerManagement.svelte  TwoPanelLayout.svelte  editableLabel.svelte  player.svelte
src/routes/: +page.svelte
static/: styles.css
