[package]
name = "boberplayer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "boberplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
chrono = "0.4.38"
sqlx = "0.8.2"
tokio = "1.41.0"
lazy_static = "1.5.0"
tauri-plugin-log = "2"
log = "0.4"
ftp = "3.0.1"
async-rwlock = "1.3.0"
uuid = {version = "1.11.1", features=["v4","serde"]}
